# dynamixel_mikata_arm

./: .gitignore  INSTALL-ja.txt  INSTALL.txt  README.md  install.sh
mikata_arm/: CMakeLists.txt  package.xml
mikata_arm_bringup/: CMakeLists.txt  package.xml
mikata_arm_bringup/cfg/: Position.cfg  Velocity.cfg
mikata_arm_bringup/description/meshes/: mikata_arm_4_gripper.dae  mikata_arm_4_joint2.dae  mikata_arm_4_joint4.dae  mikata_arm_4_joint4.stl
mikata_arm_bringup/description/rviz/: config.rviz  motion_player.rviz
mikata_arm_bringup/description/urdf/: mikata_arm_4.urdf
mikata_arm_bringup/include/: motion_player.h  writeAll.h
mikata_arm_bringup/include/mikata_arm_bringup/: motion_player.h  srv_util.h  writeAll.h
mikata_arm_bringup/launch/: bringup.launch  motion_player_rviz.launch  rviz.launch
mikata_arm_bringup/scripts/: rviz_overlay_text.py
mikata_arm_bringup/src/: bringup.cpp  gui_control.cpp
mikata_arm_description/: CMakeLists.txt  package.xml
mikata_arm_description/launch/: mikata_arm_display.launch  mikata_arm_display.rviz
mikata_arm_description/meshes/: mikata_arm_4_gripper.stl  mikata_arm_4_joint1.dae  mikata_arm_4_joint1.stl  mikata_arm_4_joint2.stl  mikata_arm_4_joint5.dae  mikata_arm_4_joint5.stl  mikata_arm_4_joint5_sr300.dae
mikata_arm_description/urdf/: mikata_arm_4.urdf
mikata_arm_msgs/: CMakeLists.txt  package.xml
mikata_arm_msgs/msg/: dxl_double.msg  dxl_int.msg  dxl_settings.msg
mikata_arm_msgs/srv/: GetInfo.srv  InverseKinematics.srv  SetInfo.srv  onTime.srv
mikata_arm_toolbox/: CMakeLists.txt  package.xml
mikata_arm_toolbox/data/: motion.txt  positions.txt
mikata_arm_toolbox/include/: basic_util.h  cli_core.h  conversion_util.h  dxl_ctrl_table.h  kinematics.h  link.h  parameters.h  srv_util.h  teach.h
mikata_arm_toolbox/include/mikata_arm_toolbox/: basic_util.h  cli_core.h  conversion_util.h  dxl_ctrl_table.h  dxl_util.h  kinematics.h  link.h  parameters.h  teach.h
mikata_arm_toolbox/src/: basic_util.cpp  cli_control.cpp  dxl_factory_reset.cpp  dxl_setup.cpp  dxl_util.cpp  kinematics.cpp
