<?xml version="1.0"?>
<package>
  <name>mikata_arm_msgs</name>
  <version>0.0.0</version>
  <description>The mikata_arm_msgs package</description>
  <maintainer email="jp.support@robotis.com">robotis</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
